# ai-lab

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  labs.toml  pyproject.toml
data/: all_transactions.csv
docs/: api_reference.md  beginner_guide.md  cli_cheatsheet.md  code_explanation.md  gemma_explanation.md  langchain_roadmap.md  quick_demo.md  training.md  tts_usage.md
labs/: __init__.py  api.py  cli.py  config.py  embeddings.py  generate.py  interactive.py  model_loader.py  rag_qa.py  tts.py  ui.py
tests/: test_smoke.py
