[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["labs"]

[project]
name = "labs"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.1",
    "transformers>=4.56.1",
    "torch",
    "torchvision",
    "torchaudio",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "python-dotenv>=1.0.1",
    "sentence-transformers>=3.0.0",
]

[tool.uv.sources]
torch = { index = "pytorch-nightly" }
torchvision = { index = "pytorch-nightly" }
torchaudio = { index = "pytorch-nightly" }

[[tool.uv.index]]
name = "pytorch-nightly"
url = "https://download.pytorch.org/whl/nightly/cu130"

[project.scripts]
labs-gen = "labs.cli:main"
labs-api = "labs.api:main"

[project.optional-dependencies]
quantization = ["bitsandbytes>=0.43.0"]
test = ["pytest>=8.2"]
