[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["labs"]

[tool.uv.sources]
transformers = { git = "https://github.com/huggingface/transformers.git" }

[project]
name = "labs"
version = "0.1.0"
description = "AI Labs - OpenAI-Compatible Local LLM Inference Server with TTS"
requires-python = ">=3.13"
dependencies = [
    # AI/ML Core
    "accelerate>=1.10.1",                    # HuggingFace model acceleration
    "transformers>=4.56.1",                 # Latest dev version for model support
    "torch>=2.6",                           # PyTorch 2.8.0 for security and performance
    "torchaudio",                           # Audio processing for TTS
    "sentence-transformers>=3.0.0",         # Text embeddings
    "sentencepiece>=0.2.1",                 # SentencePiece tokenization
    "scipy>=1.16.2",                        # Scientific computing (TTS audio processing)
    
    # API Server
    "fastapi>=0.111.0",                     # High-performance web framework
    "uvicorn[standard]>=0.30.0",            # ASGI server with websockets
    "python-dotenv>=1.0.1",                 # Environment variable management
    
    # CLI and UI
    "rich>=13.0.0",                         # Beautiful terminal UI
    "typer>=0.12.0",                        # Modern CLI framework
    "inquirer>=3.4.0",                      # Interactive prompts
    
    # Data Processing
    "pandas>=2.0.0",                        # Data analysis (RAG system)
    "datasets>=2.0.0",                      # HuggingFace datasets
]


[project.scripts]
labs-gen = "labs.cli:main"
labs-api = "labs.api:main"

[project.optional-dependencies]
test = ["pytest>=8.2"]
